Fixed bugs and Dark Mode

--- a/src/input.css
+++ b/src/input.css
@@ -7,12 +7,12 @@ body {
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70;
-  backdrop-filter: blur(5px);
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop:blur-sm dark:bg-dark dark:bg-opacity-50;
+  /* backdrop-filter: blur(5px); */
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 .hamburger-line {
-  @apply w-[30px] h-[2px] bg-dark my-2 block;
+  @apply w-[30px] h-[2px] bg-dark my-2 block dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
@@ -34,4 +34,7 @@ footer {
   width: fit-content;
   border-bottom: 1px solid #ccc;
   margin: 20px 0px;
+}
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-3;
 }
